--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -23,3 +23,23 @@
     margin-top 70px
     padding 30px 0
     text-align center
+html 
+    background url(http://www.gratisography.com/pictures/28_1.jpg) no-repeat center center fixed
+    -webkit-background-size cover
+    -moz-background-size cover
+    -o-background-size cover
+    background-size cover
+body {
+            font-size: 16px;
+            background: transparent;
+        }
+
+        /* Override B3 .panel adding a subtly transparent background */
+        .panel {
+            background-color: rgba(255, 255, 255, 0.9);
+        }
+
+        .margin-base-vertical {
+            margin: 40px 0;
+        }
+    
